--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PAM_PrayHub</string>
+    <string name="entry_doa">Tambah Doa</string>
+    <string name="judul">Judul</string>
+    <string name="isi">Isi</string>
+    <string name="tanggal">Tanggal</string>
+    <string name="id_penggunaFK">Id Pengguna</string>
 </resources>
