--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="delete">Hapus</string>
     <string name="yes">Ya</string>
     <string name="no">Tidak</string>
+    <string name="detail_pengguna">Detail Pengguna</string>
 
 
 
